:bug : fix: fixing  errors customerComponent

--- a/frontend/src/app/components/dashboard/navigation/navigation.component.html
+++ b/frontend/src/app/components/dashboard/navigation/navigation.component.html
@@ -24,7 +24,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Marveland Admin</span>
+      <span stile="align:center;">  <mat-icon>rocket_launch</mat-icon> Marveland Admin</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
 
