--- a/frontend/src/app/components/customer/list-customer/list-customer.component.css
+++ b/frontend/src/app/components/customer/list-customer/list-customer.component.css
@@ -1,5 +1,5 @@
 table {
-  width: 100%;
+  width: 100%; 
 }
 .delete{
   color: RED;
@@ -12,6 +12,19 @@ cursor: pointer;
   width: auto;
 }
 .mat-mdc-form-field {
-  font-size: 14px;
-  width: 100%;
+  font-size: 16px;
+  width: 81%;
+  height: 80px;
+}
+
+.btnCreateCustomer{
+width: 19%;
+margin-left: 4px;
+height: 4px;
+font-size: 16px;
+height:58px;
+}
+.icon{
+  width: 30px;
+  height: auto;
 }
