--- a/frontend/src/app/components/customer/list-customer/list-customer.component.html
+++ b/frontend/src/app/components/customer/list-customer/list-customer.component.html
@@ -1,17 +1,19 @@
 <div class="grid-container">
   <mat-grid-list cols="2" rowHeight="350px">
     <mat-card class="dashboard-card">
+       <mat-card-title> Clientes </mat-card-title>
       <mat-card-header>
-        <mat-card-title> Clientes </mat-card-title>
-      </mat-card-header>
-      <mat-card-content class="dashboard-card-content">
         <!-- contenido de las cards aca listado de clientes -->
-
-        <mat-form-field>
+        <mat-form-field> <!--buscar cliente-->
           <mat-label>Filter</mat-label>
-          <input matInput ((keypress)="applyFilter($event)" placeholder="Realiza tu busqueda" #input>
-        </mat-form-field>
-
+          <input matInput (keyup)="applyFilter($event)"  placeholder="Realiza tu busqueda" #input>
+        </mat-form-field> <!--buscar cliente-->
+         <!-- boton registrar cliente showDialog-->  
+            <button mat-raised-button color="primary"  class="btnCreateCustomer"(click)="openAddEditCustomer();"> <mat-icon class="icon">person_add</mat-icon> Cliente</button> 
+        </mat-card-header>
+            <mat-card-content class="dashboard-card-content">  
+   
+<!-- boton tabla clientes-->
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
           <ng-container matColumnDef="lastName">
@@ -42,27 +44,30 @@
             <td mat-cell *matCellDef="let element"> {{element.birthdate}} </td>
           </ng-container>
           <ng-container matColumnDef="acciones">
-            <th mat-header-cell *matHeaderCellDef> acciones </th>
-            <td mat-cell *matCellDef="let element" style="text-align:end;">
+            <th mat-header-cell *matHeaderCellDef> Acciones </th>
+            <td mat-cell *matCellDef="let element">
               <a class="pointer" style="color: blueviolet;">
-                <mat-icon matTooltip="Editar">edit_note</mat-icon>
+                <mat-icon matTooltip="Editar" class="icon">edit_note</mat-icon>
               </a>
               <a class="pointer" style="color: blueviolet;">
-                <mat-icon matTooltip="mas info">manage_search</mat-icon>
+                <mat-icon matTooltip="mas info" class="icon">manage_search</mat-icon>
               </a>
               <a class="pointer" style="color:red;">
-                <mat-icon class="delete" matTooltip="Eliminar">delete</mat-icon>
+
+                <mat-icon class="delete" matTooltip="Eliminar" class="icon">delete</mat-icon>
               </a>
             </td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-   
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-  showFirstLastButtons
-  aria-label="Select page of periodic elements">
-</mat-paginator>
+<!-- boton tabla clientes-->
+
+<!-- paginador-->
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+          aria-label="Select page of periodic elements">
+        </mat-paginator>
+<!-- paginador-->
 
       </mat-card-content>
     </mat-card>
