--- a/frontend/src/app/components/dashboard/navigation/navigation.component.html
+++ b/frontend/src/app/components/dashboard/navigation/navigation.component.html
@@ -3,15 +3,15 @@
 <mat-sidenav-container class="sidenav-container">
 
   <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar><a [routerLink]="['/dashboard']" >Panel de Control</a></mat-toolbar>
+    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'"
+    [opened]="(isHandset$ | async) === false">
+    <mat-toolbar><a [routerLink]="['/dashboard']">Panel de Control</a></mat-toolbar>
     <mat-nav-list>
-    
-    <a mat-list-item [routerLink]="['customer/list']">Clientes</a>
-    <a mat-list-item [routerLink]="['customer/customer']">Administrador</a>
-    <a mat-list-item  (click)="onLogout()" [routerLink]="['/login']">Salir</a>
+
+      <a mat-list-item [routerLink]="['customer/list']">Clientes</a>
+      <a mat-list-item [routerLink]="['customer/customer']">Administrador</a>
+      <a mat-list-item (click)="onLogout()" [routerLink]="['/login']">Salir</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -24,10 +24,11 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span stile="align:center;">  <mat-icon>rocket_launch</mat-icon> Marveland Admin</span>
+      <span stile="align:center;"> <mat-icon>rocket_launch</mat-icon> Marveland
+        Admin</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
 
   </mat-sidenav-content>
- 
+
 </mat-sidenav-container>
