--- a/frontend/src/app/components/dashboard/navigation/navigation.component.html
+++ b/frontend/src/app/components/dashboard/navigation/navigation.component.html
@@ -10,7 +10,9 @@
     <mat-nav-list>
 
       <a mat-list-item [routerLink]="['customer/list']">Clientes</a>
-      <a mat-list-item [routerLink]="['customer/customer']">Administrador</a>
+      <a mat-list-item [routerLink]="['gameEmployee/list']">Empleado de juegos</a>
+      <a mat-list-item [routerLink]="['game/list']">Juegos</a>
+      <a mat-list-item [routerLink]="['customer/list']">Administrador</a>
       <a mat-list-item (click)="onLogout()" [routerLink]="['/login']">Salir</a>
     </mat-nav-list>
   </mat-sidenav>
