--- a/frontend/src/app/components/game/add-update-game/add-update-game.component.css
+++ b/frontend/src/app/components/game/add-update-game/add-update-game.component.css
@@ -4,7 +4,7 @@
 }
 
 .content {
-    padding-top:5px ; 
+    padding-top:1px ; 
 }
 
 .size{
@@ -13,6 +13,6 @@
 at-form-field{
     width: 100%;
 }
-strong{
-    padding-top: 30px;
+.timeSize{
+    width: 44%;
 }
