--- a/frontend/src/app/components/game/list-game/list-game.component.html
+++ b/frontend/src/app/components/game/list-game/list-game.component.html
@@ -36,6 +36,18 @@
                   <th mat-header-cell *matHeaderCellDef> Precio </th>
                   <td mat-cell *matCellDef="let element"> {{element.price | currency}} </td>
                 </ng-container>
+                <ng-container matColumnDef="startTime">
+                  <th mat-header-cell *matHeaderCellDef> Hora Inicio </th>
+                  <td mat-cell *matCellDef="let element"> {{element.startTime }} </td>
+                </ng-container>
+                <ng-container matColumnDef="endTime">
+                  <th mat-header-cell *matHeaderCellDef> Hora Fin </th>
+                  <td mat-cell *matCellDef="let element"> {{element.endTime }} </td>
+                </ng-container>
+              
+              
+              
+              
                 <ng-container matColumnDef="acciones">
                   <th mat-header-cell *matHeaderCellDef> Acciones </th>
                   <td mat-cell *matCellDef="let element">
