--- a/frontend/src/app/components/landing/landing.component.html
+++ b/frontend/src/app/components/landing/landing.component.html
@@ -22,7 +22,8 @@
             <li><a class="nav-link scrollto" href="#team">Team</a></li>
         
             <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
-            <li><a class="getstarted scrollto" href="#about">Comenzar</a></li>
+            <li><a class="getstarted scrollto" >Comenzar</a></li>
+            <li><a [routerLink]="['login']" >Login</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
@@ -130,7 +131,8 @@
   
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="member" data-aos="fade-up" data-aos-delay="200">
-                <div class="pic"><img src="assets/img/team/team-3.jpg" alt=""></div>
+                <div class="pic"><img src="/assets/img/team-3.jpg" alt=""></div>
+
                 <h4>William Anderson</h4>
                 <span>CTO</span>
                 <div class="social">
