--- a/frontend/src/app/components/dashboard/navigation/navigation.component.html
+++ b/frontend/src/app/components/dashboard/navigation/navigation.component.html
@@ -7,14 +7,21 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'"
     [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Panel de Control</mat-toolbar>
-    <mat-nav-list>
+    <h4>Usuario:</h4>
+    <h4>{{marcos}}</h4>
+    <Strong *ngIf= "role ===( 'ADMIN')">ADMINISTRADOR</Strong>
+    <Strong *ngIf= "role ===( 'EMPLOYEE')">ENCARGADO DE JUEGOS</Strong>
+   
+  
+   <mat-nav-list>
 <!-- *ngIf="role==('EMOPLOYEE')"-->
 <hr>
 
       <a *ngIf="role==('ADMIN')" mat-list-item [routerLink]="['customer/list']">Clientes</a>
-      <a  *ngIf="role==('ADMIN')" mat-list-item [routerLink]="['gameEmployee/list']">Empleado de juegos</a>
+      <a  *ngIf="role==('ADMIN')" mat-list-item [routerLink]="['gameEmployee/list']">Encargado de juegos</a>
       <a *ngIf="role==('ADMIN')" mat-list-item [routerLink]="['game/list']">Juegos</a>
-      <a *ngIf="role==('ADMIN')" mat-list-item [routerLink]="['customer/list']">Administrador</a>
+      <a *ngIf="role==('EMPLOYEE')" mat-list-item [routerLink]="['ticket/ticket']">Ventas de entradas</a>
+     
       <br>
       <hr>
       <a  mat-list-item (click)="onLogout()" [routerLink]="['/login']">Salir</a>
@@ -34,7 +41,6 @@
         Admin</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
-
   </mat-sidenav-content>
 
 </mat-sidenav-container>
